--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
 		"@nestjs/config": "^2.0.0",
 		"@nestjs/core": "^8.0.0",
 		"@nestjs/platform-express": "^8.0.0",
+		"@typegoose/typegoose": "^9.8.1",
+		"mongoose": "^6.3.3",
+		"nestjs-typegoose": "^7.1.38",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
-		"rxjs": "^7.2.0"
+		"rxjs": "^7.2.0",
+		"webpack": "^5.72.1"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^8.0.0",
@@ -35,6 +39,7 @@
 		"@nestjs/testing": "^8.0.0",
 		"@types/express": "^4.17.13",
 		"@types/jest": "27.5.0",
+		"@types/mongoose": "^5.11.97",
 		"@types/node": "^16.0.0",
 		"@types/supertest": "^2.0.11",
 		"jest": "28.0.3",
