--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MONGO_LOGIN=""
 MONGO_PASSWORD=""
 MONGO_HOST="localhost"
 MONGO_PORT="27017"
-MONGO_AUTHDATABASE="products"
+MONGO_AUTHDATABASE="Top"
